--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>poiboi's blog</title>
-        <link rel="stylesheet" href=".css/global.css">
+        <link rel="stylesheet" href="css/global.css">
         <link rel="stylesheet" href="css/media-queries.css">
         <meta name="viewport" content="width=device-width">
         <meta name="author" content="poiboi">
