--- a/misc.html
+++ b/misc.html
@@ -40,10 +40,10 @@
                                 </svg>
                             </div>
                         </li>
-                        <li><a href="/" class="nav-link">HOME</a></li>
-                        <li><a href="about" class="nav-link">ABOUT ME</a></li>
-                        <li><a href="#" class="nav-link">PROJECTS</a></li>
-                        <li><a href="misc" class="nav-link">MISC.</a></li>
+                        <li><a href="index" class="nav-link">HOME</a></li>
+                        <li><a href="about.html" class="nav-link">ABOUT ME</a></li>
+                        <li><a href="projects.html" class="nav-link">PROJECTS</a></li>
+                        <li><a href="misc.html" class="nav-link">MISC.</a></li>
                     </ul>
                 </nav>
             </header>
