--- a/misc.html
+++ b/misc.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/media-queries.css">
         <meta name="viewport" content="width=device-width">
         <meta name="author" content="poiboi">
-        <meta name="description" content="poiboi is a backend, excelling in Python and knowledgable in HTML.">
+        <meta name="description" content="poiboi is a backend developer, excelling in Python and knowledgable in HTML.">
         <meta name="keywords" content="developer,poiboi,backend,python,frontend,html,java,css,ai,github,coder,programmer,computer,cs,science">
         <!-- <meta http-equiv="refresh" content="1"> -->
         <link rel="preconnect" href="https://fonts.googleapis.com"> <!--preload for fast loading times-->
